--- a/index.html
+++ b/index.html
@@ -1,81 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="/styles.css" />
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&amp;display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles.css">
     <title>Work Day Scheduler</title>
   </head>
-<body>
-  <h1 id="current-day"></h1>
-  <div class="time-blocks">
-    <div class="time-block past">
-      <p class="time-block-time"> 9:00 AM</p>
-      <textarea class="time-block-event"></textarea>
-      <button class="save-btn">Save</button>
-    </div>
-    <div class="time-block present">
-      <p class="time-block-time"> 10:00 AM</p>
-      <textarea class="time-block-event"></textarea>
-      <button class="save-btn">Save</button>
-    </div>
-    <div class="time-block future">
-      <p class="time-block-time"> 11:00 AM</p>
-      <textarea class="time-block-event"></textarea>
-      <button class="save-btn">Save</button>
-    </div>
-    <div class="time-block future">
-      <p class="time-block-time"> 12:00 PM</p>
-      <textarea class="time-block-event"></textarea>
-      <button class="save-btn">Save</button>
-    </div>
-    <div class="time-block future">
-        <p class="time-block-time"> 1:00 PM</p>
-        <textarea class="time-block-event"></textarea>
-        <button class="save-btn">Save</button>
-      </div>
-      <div class="time-block future">
-        <p class="time-block-time"> 2:00 PM</p>
-        <textarea class="time-block-event"></textarea>
-        <button class="save-btn">Save</button>
-      </div>
-      <div class="time-block future">
-        <p class="time-block-time"> 3:00 PM</p>
-        <textarea class="time-block-event"></textarea>
-        <button class="save-btn">Save</button>
-      </div>
-      <div class="time-block future">
-        <p class="time-block-time"> 4:00 PM</p>
-        <textarea class="time-block-event"></textarea>
-        <button class="save-btn">Save</button>
-      </div>
-      <div class="time-block future">
-        <p class="time-block-time"> 5:00 PM</p>
-        <textarea class="time-block-event"></textarea>
-        <button class="save-btn">Save</button>
-      </div>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
-      integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
-      crossorigin="anonymous"></script>
-  
-      <script src="/script.js"></script>
-    </body>
-  </html>
+  <body>
+    <header class="p-5 mb-4 border-5 border-bottom border-dark text-center">
+      <h1 class="display-3">Work Day Scheduler</h1>
+      <p class="lead">A simple calendar app for scheduling your work day</p>
+      <p id="currentDay" class="lead">Sunday, December 11th</p>
+    </header>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <div class="container-lg px-5">
+        <div class="row entry-msg"></div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+        integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
+        crossorigin="anonymous"></script>
+    <script src="script.js"></script>
+  </body>
+</html>
